Changed Readme's for 'Dataprocessing with Snakemake' and 'Diagnostic Genome Analysis'.

--- a/diagnostic-genome-analysis/Snakefile
+++ b/diagnostic-genome-analysis/Snakefile
@@ -29,9 +29,9 @@ include: "rules/fastqc.snakefile"
 include: "rules/trimmomatic.snakefile"
 include: "rules/bwa_mem.snakefile"
 include: "rules/samtools_sort.snakefile"
-include: "rules/bamtools_split.snakefile"
 include: "rules/marked_duplicates.snakefile"
-include: "rules/mpileup.snakefile"
+include: "rules/bamtools_split.snakefile"
+include: "rules/samtools_mpileup.snakefile"
 include: "rules/varscan.snakefile"
 include: "rules/concat_vcf.snakefile"
 include: "rules/annovar.snakefile"
